@@ -1,7 +1,7 @@
 #/*! \page config_rpmrc Default configuration: /usr/lib/rpm/rpmrc
 # \verbatim
 #
-# $Id: rpmrc.in,v 2.42 2001/07/24 02:52:52 jbj Exp $
+# $Id: rpmrc.in,v 2.43 2001/07/31 18:13:23 jbj Exp $
 #
 # This is a global RPM configuration file. All changes made here will
 # be lost when the rpm package is upgraded. Any per-system configuration
@@ -45,7 +45,7 @@ optflags: hppa1.1 -O2 -mpa-risc-1-0
 optflags: hppa1.2 -O2 -mpa-risc-1-0
 optflags: hppa2.0 -O2 -mpa-risc-1-0
 
-optflags: mipseb -O2
+optflags: mips -O2
 optflags: mipsel -O2
 
 optflags: armv3l -O2 -fsigned-char -fomit-frame-pointer -march=armv3
@@ -86,7 +86,7 @@ arch_canon: 	sun4c:	sparc	3
 arch_canon:	sun4d:  sparc   3
 arch_canon:   sparcv9: sparcv9	3
 # This is really a place holder for MIPS.
-arch_canon:	mipseb:	mipseb	4
+arch_canon:	mips:	mips	4
 
 arch_canon:	ppc:	ppc	5
 arch_canon:	ppciseries:	ppciseries	5
@@ -232,7 +232,7 @@ arch_compat: sparc64: sparcv9
 arch_compat: sparcv9: sparc
 arch_compat: sparc: noarch
 
-arch_compat: mipseb: noarch
+arch_compat: mips: noarch
 arch_compat: mipsel: noarch
 
 arch_compat: hppa2.0: hppa1.2
@@ -316,8 +316,8 @@ buildarch_compat: ppcpseries: noarch
 buildarch_compat: ppcmac: noarch
 buildarch_compat: ppc: noarch
 
+buildarch_compat: mips: noarch
 buildarch_compat: mipsel: noarch
-buildarch_compat: mipseb: noarch
 
 buildarch_compat: armv3l: noarch
 buildarch_compat: armv4b: noarch
